Final Sub add map + UnitTest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:name="com.example.storyapp.WRITE_DATABASE"
         android:protectionLevel="normal" />
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission
@@ -26,31 +28,40 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".utils.MyApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StoryAPP"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD-l-Zf333TGMgHFK2FmKXtSpupA5AJMFw"/>
         <activity
-            android:name=".Settings.SettingActivity"
+            android:name=".map.MapStorys"
+            android:exported="false"
+            android:label="@string/title_maps_story"/>
+        <activity
+            android:name=".map.MapsActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".camera.CameraActivity"
             android:exported="false" />
         <activity
-            android:name=".Camera.CameraActivity"
+            android:name=".addstory.AddStoryActivity"
             android:exported="false" />
         <activity
-            android:name=".AddStory.AddStoryActivity"
+            android:name=".mainstory.StoryDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".MainStory.StoryDetailActivity"
+            android:name=".register.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".Register.RegisterActivity"
+            android:name=".login.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".Login.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SplashScreen.SplashScreen"
-            android:exported="true" >
+            android:name=".splash_screen.SplashScreen"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -58,10 +69,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainStory.MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:name=".mainstory.MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
